# bazel-simple-python

./: .editorconfig  .gitignore  BUILD.bazel  MODULE.bazel  README.md  main.py  pyproject.toml  requirements.txt
apache-airflow/dag/docker-operator-dag/: pyproject.toml  task.py
apache-airflow/dag/macro-dag/: BUILD.bazel  README.md
apache-airflow/dag/simple-dag/: pyproject.toml  test_dag.py
api/: pyproject.toml
dag/: local_dev.py  minimal_dag.py
dag/docker-operator-dag/: BUILD.bazel  Dockerfile  README.md  dag.py  local_dev.py
dag/macro-dag/: BUILD.bazel  pyproject.toml  task.py
dag/simple_dag/: BUILD.bazel
mylib/: BUILD.bazel  pyproject.toml  test.py
mylib/src/mylib/: BUILD.bazel
prefect-core/: README.md  main.py  pyproject.toml
prefect-core/flows/: my_workflow.py  snakesay_flow.py
