load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@pip//:requirements.bzl", "requirement")

load("@rules_uv//uv:pip.bzl", "pip_compile")

package(default_visibility = ["//visibility:public"])

py_binary(
  name = "main",
  srcs = ["main.py"],
  deps = [
    "//mylib:name",
  ]
)

pip_compile(
    name = "generate_requirements_txt",
    requirements_in = "pyproject.toml",
    requirements_txt = "requirements.txt",
)
