module(
    name = "bazel-simple-python",
    version = "0.3",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.3.0")

# INFO: https://github.com/theoremlp/rules_uv/
bazel_dep(name = "rules_uv", version = "0.63.0")

# INFO: https://github.com/bazel-contrib/rules_oci/
bazel_dep(name = "rules_oci", version = "2.2.5")

# INFO:https://github.com/bazelbuild/rules_pkg/
bazel_dep(name = "rules_pkg", version = "1.1.0")

# INFO: Python config
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_requirement_cycles = {
        "airflow": [
            "apache-airflow",
            "apache-airflow-providers-common-compat",
            "apache-airflow-providers-common-io",
            "apache-airflow-providers-common-sql",
            "apache-airflow-providers-fab",
            "apache-airflow-providers-ftp",
            "apache-airflow-providers-http",
            "apache-airflow-providers-imap",
            "apache-airflow-providers-postgres",
            "apache-airflow-providers-smtp",
            "apache-airflow-providers-sqlite",
        ],
    },
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

# INFO: Docker Images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# INFO: https://hub.docker.com/_/python
oci.pull(
    name = "python3",
    digest = "sha256:e52ca5f579cc58fed41efcbb55a0ed5dccf6c7a156cba76acfb4ab42fc19dd00",
    image = "python:3.9-slim",
    platforms = ["linux/amd64"],
)
use_repo(oci, "python3")
