load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "name",
    srcs = ["name.py"],
    visibility = ["//:__pkg__"],
)

py_test(
    name = "test",
    srcs = ["test.py"],
    deps = [":name"],
)
