load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "main",
    srcs = ["src/mylib/__init__.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test",
    srcs = ["test.py"],
    deps = [":main"],
)
