load("@pypi//:requirements.bzl", "requirement")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "task",
    srcs = ["task.py"],
    main = "task.py",
    deps = [],
)

# INFO: Package the Python binary into a tar archive
pkg_tar(
    name = "task_tar",
    srcs = [":task"],
    include_runfiles = True,  # Python binaries
    package_dir = "/app",  # Where files will be placed in container
)

# INFO: Cria a imagem
oci_image(
    name = "image",
    base = "@python3",
    cmd = ["python3"],
    entrypoint = ["/app/task"],  # Path binary in container
    tars = [":task_tar"],  # packaged application
)

# INFO: Registra a imagem no ambiente
oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["docker-operator-dag:latest"],
)
