load("@pypi//:requirements.bzl", "requirement")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    # BUG:  bazel run //dag/macro-dag:task not found getName
    name = "task",
    srcs = ["task.py"],
    main = "task.py",
    deps = [
        "//mylib:main",
    ],
)
